--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -18,3 +18,10 @@
 .nav-link-text {
   color: black;
 }
+
+.blog-title {
+  font-size: 3rem;
+  color: #0C5CE8;
+  font-weight: 700;
+  margin: 3rem 0;
+}
